[tool.poetry]
name = "coolapk"
version = "0.1.0"
description = ""
authors = ["dream2333 <vincentqng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bcrypt = "^4.0.1"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
